# kdelibs4support

./: .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5KDE4SupportConfig.cmake.in  KF5KDELibs4SupportConfig.cmake.in  README.md  kde-config.cpp  metainfo.yaml
autotests/: CMakeLists.txt  globalcleanuptest.cpp  k4timezonewidget_unittest.cpp  kaccelgentest.cpp  kasciitest.cpp  kasciitest.h  kbuttongrouptest.cpp  kbuttongrouptest.h  kcalendartest.cpp  kcalendartest.h  kcmdlineargs_unittest.cpp  kconfigafterkglobaltest1.cpp  kconfigafterkglobaltest2.cpp  kdatetimeformattertest.cpp  kdatetimeformattertest.h  kdatetimetest.cpp  kdatetimetest.h  kdebug_qcoreapptest.cpp  kdebug_unittest.cpp  kdebug_unittest.h  kdebugtest.cpp  kdialog_unittest.cpp  kfadewidgeteffecttest.cpp  kfilemetainfotest.cpp  kfilemetainfotest.h  kglobalsettingsclient.cpp  kglobalsettingstest.cpp  kglobalsettingstest.h  kglobalstatictest.cpp  kglobaltest.cpp  kiotesthelper.h  klibloadertest.cpp  klibloadertest.h  klibloadertest3_module.cpp  klibloadertest3_module.h  klibloadertest4_module.cpp  klibloadertest5_module.cpp  klibloadertest5_module.h  klibloadertest_module.cpp  klibloadertest_module.h  (+30 more)
src/: CMakeLists.txt  ConfigureChecks.cmake  KDECoreMacros.cmake  Messages.sh  classpreviews.h  config-kstandarddirs.h.cmake  kcupsoptionsjobwidget_p.h  kcupsoptionspageswidget_p.cpp  kcupsoptionspageswidget_p.h  kcupsoptionssettingswidget_p.h  kcupsoptionswidget_p.cpp  kcupsoptionswidget_p.h  kdedeprecated.widgets  kdemacros.h.cmake  kdeprintdialog.cpp  kdeprintdialog.h  kprintpreview.cpp  kprintpreview.h
src/includes/: CMakeLists.txt  K4AboutData  KACL  KAboutApplicationDialog  KAboutPerson  KAcceleratorManager  KActionCategory  KActionMenu  KActionSelector  KAnimatedButton  KAr  KArchiveFile  KArrowButton  KAscii  KAssistantDialog  KAuthorized  KAutoMount  KAutoSaveFile  KAutostart  KBookmarkActionMenu  KBookmarkDialog  KBookmarkDomBuilder  KBookmarkExporterBase  KBookmarkGroup  KBookmarkImporterBase  KBookmarkManager  KBreadcrumbSelectionModel  KBugReport  KBuildSycocaProgressDialog  KButtonGroup  KCModule  KCModuleContainer  KCModuleInfo  KCModuleLoader  KCModuleProxy  KCMultiDialog  KCalendarSystem  KCapacityBar  KCategorizedSortFilterProxyModel  KCategorizedView  (+251 more)
src/kdebugdialog/: CMakeLists.txt  kabstractdebugdialog.cpp  kabstractdebugdialog.h  kdebugdialog.cpp  kdebugdialog.h  klistdebugdialog.cpp  klistdebugdialog.h  main.cpp
src/kdecore/: Messages.sh  TIMEZONES  all_languages.desktop  k3bufferedsocket.cpp  k3bufferedsocket.h  k3clientsocketbase.cpp  k3clientsocketbase.h  k3resolver.cpp  k3resolver.h  k3resolver_p.h  k3resolvermanager.cpp  k3resolverstandardworkers.cpp  k3resolverstandardworkers_p.h  k3resolverworkerbase.cpp  k3resolverworkerbase.h  k3reverseresolver.cpp  k3reverseresolver.h  k3serversocket.cpp  k3serversocket.h  k3socketaddress.cpp  k3socketaddress.h  k3socketbase.cpp  k3socketbase.h  k3socketbuffer.cpp  k3socketbuffer_p.h  k3socketdevice.cpp  k3socketdevice.h  k3socks.cpp  k3socks.h  k3sockssocketdevice.cpp  k3sockssocketdevice.h  k3streamsocket.cpp  k3streamsocket.h  k4aboutdata.cpp  k4aboutdata.h  kascii.cpp  kascii.h  kcalendarera.cpp  kcalendarera_p.h  kcalendarsystem.cpp  (+113 more)
src/kdeui/: Messages.sh  fonthelpers.cpp  fonthelpers_p.h  k3icon_p.h  k4style.cpp  k4style.h  k4timezonewidget.cpp  k4timezonewidget.h  kaccelgen.h  kaction.cpp  kaction.h  kaction_p.h  kapplication.cpp  kapplication.h  kapplication_win.cpp  karrowbutton.cpp  karrowbutton.h  kbuttongroup.cpp  kbuttongroup.h  kcolorchoosermode.cpp  kcolorchoosermode.h  kcolorchoosermode_p.h  kcolordialog.cpp  kcolordialog.h  kcolordialog_p.h  kcolorhelpers.cpp  kcolorhelpers_p.h  kcolorvalueselector.cpp  kcolorvalueselector.h  kdatetimewidget.cpp  kdatetimewidget.h  kdatewidget.cpp  kdatewidget.h  kdeprintdialog.cpp  kdeprintdialog.h  kdeuiwidgetsproxystyle.cpp  kdeuiwidgetsproxystyle_p.h  kdialog.cpp  kdialog.h  kdialog_p.h  (+77 more)
src/kio/: kcommentwidget.cpp  kcommentwidget_p.h  kdatatool.cpp  kdatatool.desktop  kdatatool.h  kdevicelistitem.cpp  kdevicelistitem_p.h  kdevicelistmodel.cpp  kdevicelistmodel.h  kdirselectdialog.cpp  kdirselectdialog.h  kdiskfreespace.cpp  kdiskfreespace.h  kfiledialog.cpp  kfiledialog.h  kfileitemactionplugin.cpp  kfileitemactionplugin.h  kfilemetadataconfigurationwidget.cpp  kfilemetadataconfigurationwidget.h  kfilemetadataprovider.cpp  kfilemetadataprovider_p.h  kfilemetadatareader.cpp  kfilemetadatareader_p.h  kfilemetadatareaderprocess.cpp  kfilemetadatawidget.cpp  kfilemetadatawidget.h  kfilemetainfo.cpp  kfilemetainfo.h  kfilemetainfoitem.cpp  kfilemetainfoitem.h  kfilemetainfoitem_p.h  kfilemetainfowidget.cpp  kfilemetainfowidget.h  kfileshare.cpp  kfileshare.h  kfileshare_p.h  kfiletreeview.cpp  kfiletreeview_p.h  kfilewrite.desktop  kfilewriteplugin.cpp  (+21 more)
src/knewstuff3/: downloaddialog.h  downloadmanager.h  downloadwidget.h  entry.h  knewstuffaction.h  knewstuffbutton.h  uploaddialog.h
src/kparts/: componentfactory.h  factory.cpp  factory.h  genericfactory.h  listingextension.h
src/kssl/: kopenssl.cpp  kopenssl.h  kssl.cpp  kssl.h  ksslcallback.c  ksslcertchain.cpp  ksslcertchain.h  ksslcertificate.cpp  ksslcertificate.h  ksslutils.cpp  ksslutils.h  ksslx509v3.cpp  ksslx509v3.h
src/l10n/: CMakeLists.txt  caribbean.desktop  (+19 more)
tests/: CMakeLists.txt  README.md  genericfactory.cpp  kcmdlineargstest.cpp  kcolordlgtest.cpp  kdatetimewidgettest.cpp  kdatewidgettest.cpp  kdebugtest_gui.cpp  kdialogbuttonboxtest.cpp  kdialogtest.cpp  kdirselectdialogtest.cpp  keditlistboxtest.cpp  kfiledialogtest.cpp  kfiletreeviewtest.cpp  kfiletreeviewtest.h  kfontdialogtest.cpp  kfstest.cpp  kfstest.h  khboxtest.cpp  khboxtest.h  kinputdialogtest.cpp  kiopassdlgtest.cpp  kmdcodectest.cpp  kmessageboxqueuedtest.cpp  kmessagetest.cpp  kmessagetest.h  kmfitest.cpp  knuminputtest.cpp  knuminputtest.h  kprintpreview_test.cpp  kprogressdialogtest.cpp  kscantest.cpp  kshortcuttest.cpp  kstatusbartest.cpp  kstatusbartest.h  ksystemtraytest.cpp  ktabwidgettest.cpp  ktabwidgettest.h  ktextbrowsertest.cpp  kxerrorhandlertest.cpp  (+5 more)
(+1149 files in other folders)
